--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": ["esbuild", "sharp", "unrs-resolver"]
+  },
   "devDependencies": {
     "@eslint/compat": "^2.0.2",
     "@eslint/eslintrc": "^3.3.3",
